--- a/src/App.css
+++ b/src/App.css
@@ -83,11 +83,35 @@ a {
     margin-bottom: 100px;
 }
 
-p, h1 {
+p, h1, h2 {
     margin-left: 25%;
     margin-right: 25%;
 }
 
 .pagetitle {
     font-size: 50px;
+}
+
+.joinclubbuttons {
+    background-color: #DA704A;
+}
+
+.infobody {
+    background-color: white;
+    margin-left: 15%;
+    margin-right: 15%;
+    margin-top: 1%;
+    margin-bottom: 1%;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    border-radius: 15px;
+
+}
+
+h2 {
+    font-style: italic;
+}
+
+h1 {
+    font-style: bold;
 }
