--- a/src/App.css
+++ b/src/App.css
@@ -33,8 +33,8 @@ a {
 
 #circlelogo {
     display: block;
-    width: 150px;
-    height: 200px;
+    width: 350;
+    height: 400px;
     padding-top: 50px;
     margin: auto;
 }
