--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,19 @@
 * {
     font-family: JetBrainsMonoNL-Thin;
-    src: url("./fonts/ttf/JetBrainsMonoNL-Thin.ttf");
+    src: url("./fonts/JetBrainsMonoNL-Thin.ttf");
     font-weight: lighter;
     }
+
+@font-face {
+    font-family: 'JetBrainsMonoNL-Thin';
+    src: url('./fonts/JetBrainsMonoNL-Thin.eot');
+    src: url('./fonts/JetBrainsMonoNL-Thin.eot#iefix') format('embedded-opentype'),
+            url('./fonts/JetBrainsMonoNL-Thin.woff') format('woff'),
+            url('./fonts/JetBrainsMonoNL-Thin.ttf') format('truetype'),
+            url('./fonts/JetBrainsMonoNL-Thin.svg') format('svg');
+    font-weight: lighter;
+    font-style: normal;
+}
 
 body {
     margin: 0;
@@ -47,16 +58,28 @@ a {
     border-bottom-left-radius: 15px;
     padding-bottom: 30px;
     padding-top: 30px;
-    margin-bottom: 100px;
+    margin-top: 85px;
+}
+
+.carousel-images {
+    width: 300px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+
+.carousel-item {
+    margin-bottom: 200px;
 }
 
 p, h2 {
-    margin-left: 25%;
-    margin-right: 25%;
+    margin-left: 10%;
+    margin-right: 10%;
 }
 
 .pagetitle {
     font-size: 35px;
+    margin: 30px;
 }
 
 .joinclubbuttons {
@@ -65,24 +88,28 @@ p, h2 {
     margin-right: 0px;
 }
 
+
 .infobody {
     background-color: white;
     margin-left: 15%;
     margin-right: 15%;
-    margin-top: 1%;
-    margin-bottom: 1%;
-    padding-top: 15px;
-    padding-bottom: 15px;
+    margin-top: 3%;
+    margin-bottom: 3%;
+    padding-top: 25px;
+    padding-bottom: 25px;
     border-radius: 15px;
 
 }
 
 h2 {
     font-style: italic;
+    margin-bottom: 10px;
+    margin-top: 10px
 }
 
 h1 {
     font-style: bold;
+    margin: 10px;
 }
 
 .navbar-dark .navbar-nav .nav-link {
@@ -92,4 +119,61 @@ h1 {
 }
 
 
+.footer_icons {
+    height: 30px;
+    margin-left: 10px;
+    margin-right: 10px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
 
+#footer_text_club {
+    font-style: italic;
+    font-size: 15px;
+    color: #A0A0A0;
+}
+
+
+#dropdown-button {
+    background-color: #DA704A;
+    border: #DA704A;
+}
+
+.archive-dropdown {
+    background-color: white;
+    color: black;
+}
+
+.past_themes {
+    color: #D63F09;
+    font-size: 50px;
+}
+
+.carousel-section-header {
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.carousel-winner-thumbnails {
+    margin-top: 20px;
+    margin-bottom: 50px;
+}
+
+.winner-name {
+    color: #DA704A;
+    font-size: 20px;
+}
+
+.place-title {
+    padding-top: 20px;
+}
+
+.officer-title {
+    padding-top: 20px;
+    font-style: italic;
+    font-size: 20px;
+}
+
+.officer-name {
+    color: #DA704A;
+}
