--- a/src/App.css
+++ b/src/App.css
@@ -146,9 +146,8 @@ p, h2 {
     padding-top: 50px;
     margin-right: 20px;
     margin-left: 20px;
-    text-align: left;
-    padding-left: 50px;
-    font-size: 50px;
+    font-size: 40px;
+    letter-spacing: 10px;
 }
 
 .past_themes {
@@ -163,6 +162,7 @@ p, h2 {
 #beaverhacks {
     font-size: 40px;
     color: white;
+    letter-spacing: 0px;
 }
 
 #circlelogo {
