--- a/src/App.css
+++ b/src/App.css
@@ -34,6 +34,8 @@ button {
     margin: 15px;
     color: #ececec;
     font-size: 18px;
+    box-shadow: 0px 2px 20px 1px rgb(220,220,220);
+
 }
 
 h1 {
@@ -70,7 +72,7 @@ p, h2 {
 .carousel-section-header {
     font-weight: bold;
     margin-bottom: 20px;
-    margin-top: 70px;
+    margin-top: 30px;
 }
 
 
@@ -82,6 +84,11 @@ p, h2 {
     margin-bottom: 20px;
 }
 
+.hackathon-title {
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .infobody {
     background-color: white;
     margin-left: 15%;
@@ -91,6 +98,8 @@ p, h2 {
     padding-top: 25px;
     padding-bottom: 25px;
     border-radius: 15px;
+    box-shadow: 0px 2px 10px 1px rgb(220,220,220);
+
 
 }
 
@@ -136,6 +145,8 @@ p, h2 {
     border-radius: 15px;
     padding-bottom: 30px;
     padding-top: 20px;
+    box-shadow: 0px 2px 10px 1px rgb(220,220,220);
+
 }
 
 .pagetitle {
@@ -148,15 +159,27 @@ p, h2 {
     margin-left: 20px;
     font-size: 40px;
     letter-spacing: 10px;
+    box-shadow: 0px 2px 10px 1px rgb(220,220,220);
 }
 
 .past_themes {
-    color: #D63F09;
     font-size: 30px;
+    color: #DA704A
 }
 
 .place-title {
     padding-top: 40px;
+}
+
+.archive-section {
+    border-radius: 15px;
+    padding: 10px;
+    margin-left: 150px;
+    margin-right: 150px;
+    padding-bottom: 40px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    box-shadow: 0px 2px 10px 1px rgb(220,220,220);
 }
 
 #beaverhacks {
@@ -183,6 +206,10 @@ p, h2 {
     font-size: 15px;
     color: #A0A0A0;
     padding-bottom: 25px;
+}
+
+#navbar {
+    box-shadow: 0px 2px 10px 0.1px black;
 }
 
 
