--- a/src/App.css
+++ b/src/App.css
@@ -58,8 +58,13 @@ p, h2 {
 }
 
 .carousel-images {
-    width: 300px;
-    margin-top: 20px;
+  width:100%;
+  height:auto;
+  max-width:350px;
+  margin-left:auto;
+  margin-right:auto;
+  padding-top: 40px;
+  display:block;
 }
 
 
@@ -176,9 +181,8 @@ p, h2 {
     padding-bottom: 40px;
     margin-left: 3rem;
     margin-right: 3rem;
-    margin-top: 40px;
-    margin-bottom: 40px;
-    box-shadow: 0px 2px 5px 1px rgb(220,220,220);
+    margin-top: 20px;
+    margin-bottom: 20px;
 }
 
 #beaverhacks {
