--- a/src/App.css
+++ b/src/App.css
@@ -192,11 +192,13 @@ p, h2 {
 }
 
 #circlelogo {
-    display: block;
-    width: 350;
-    height: 400px;
+    width:100%;
+    height:auto;
+    max-width:400px;
+    margin-left:auto;
+    margin-right:auto;
     padding-top: 50px;
-    margin: auto;
+    display:block;
 }
 
 #dropdown-button {
