Changed title, button spacing/color, & capitals

--- a/src/App.css
+++ b/src/App.css
@@ -107,7 +107,7 @@ p, h2 {
 }
 
 .joinclubbuttons {
-    background-color: #DA704A;
+    background-color: #D63F09;
     margin-left: 0px;
     margin-right: 0px;
 }
