--- a/src/App.css
+++ b/src/App.css
@@ -2,15 +2,15 @@
     font-family: JetBrainsMonoNL-Thin;
     src: url("./fonts/JetBrainsMonoNL-Thin.ttf");
     font-weight: lighter;
-    }
+}
 
 @font-face {
     font-family: 'JetBrainsMonoNL-Thin';
     src: url('./fonts/JetBrainsMonoNL-Thin.eot');
     src: url('./fonts/JetBrainsMonoNL-Thin.eot#iefix') format('embedded-opentype'),
-            url('./fonts/JetBrainsMonoNL-Thin.woff') format('woff'),
-            url('./fonts/JetBrainsMonoNL-Thin.ttf') format('truetype'),
-            url('./fonts/JetBrainsMonoNL-Thin.svg') format('svg');
+        url('./fonts/JetBrainsMonoNL-Thin.woff') format('woff'),
+        url('./fonts/JetBrainsMonoNL-Thin.ttf') format('truetype'),
+        url('./fonts/JetBrainsMonoNL-Thin.svg') format('svg');
     font-weight: lighter;
     font-style: normal;
 }
@@ -23,7 +23,8 @@ a {
 body {
     padding-top: 4em;
     text-align: center;
-    background-color: white;
+    background-color: #212529;
+    overflow-x: hidden;
 }
 
 button {
@@ -47,7 +48,8 @@ h2 {
     margin-top: 10px
 }
 
-p, h2 {
+p,
+h2 {
     margin-left: 10%;
     margin-right: 10%;
 }
@@ -58,13 +60,13 @@ p, h2 {
 }
 
 .carousel-images {
-  width:100%;
-  height:auto;
-  max-width:350px;
-  margin-left:auto;
-  margin-right:auto;
-  padding-top: 40px;
-  display:block;
+    width: 100%;
+    height: auto;
+    max-width: 350px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 40px;
+    display: block;
 }
 
 
@@ -101,10 +103,16 @@ p, h2 {
     padding-top: 25px;
     padding-bottom: 25px;
     border-radius: 15px;
-    box-shadow: 0px 2px 10px 1px rgb(220,220,220);
-
-
+    box-shadow: 0px 2px 10px 1px rgb(220, 220, 220);
 }
+
+@media screen and (max-width: 600px) {
+    .infobody {
+        margin-left: 3%;
+        margin-right: 3%;
+    }
+}
+
 
 .joinclubbuttons {
     background-color: #D63F09;
@@ -136,6 +144,7 @@ p, h2 {
     margin-right: 0px;
 
 }
+
 .orange-body-text {
     color: #DA704A;
     font-size: 20px;
@@ -148,8 +157,8 @@ p, h2 {
     border-radius: 15px;
     padding-bottom: 30px;
     padding-top: 20px;
-    box-shadow: 0px 2px 10px 1px rgb(220,220,220);
-
+    box-shadow: 0px 2px 10px 1px rgb(220, 220, 220);
+    margin-bottom: 30px;
 }
 
 .pagetitle {
@@ -162,7 +171,7 @@ p, h2 {
     margin-left: 20px;
     font-size: 40px;
     letter-spacing: 10px;
-    box-shadow: 0px 2px 10px 1px rgb(220,220,220);
+    box-shadow: 0px 2px 10px 1px rgb(220, 220, 220);
 }
 
 .past_themes {
@@ -192,13 +201,13 @@ p, h2 {
 }
 
 #circlelogo {
-    width:100%;
-    height:auto;
-    max-width:400px;
-    margin-left:auto;
-    margin-right:auto;
+    width: 100%;
+    height: auto;
+    max-width: 400px;
+    margin-left: auto;
+    margin-right: auto;
     padding-top: 50px;
-    display:block;
+    display: block;
 }
 
 #dropdown-button {
@@ -210,10 +219,42 @@ p, h2 {
     font-style: italic;
     font-size: 15px;
     color: #A0A0A0;
-    padding-bottom: 25px;
 }
 
+.background-gradient {
+    background: #212529;
+    width: auto;
+    height: 100vh;
+}
 
+.smallText{
+    margin: auto;
+    color: rgb(255, 115, 0);
+    padding-top: 20px;
+    padding-bottom: 20px;
+}
 
+.bigText {
+    padding-top: 150px;
+    font-size: 10vw;
+    background-image: linear-gradient(90deg,
+            rgb(255, 115, 0) 0%,
+            rgb(255, 212, 177) 10%,
+            rgb(255, 115, 0) 20%,
+            rgb(255, 115, 0) 100%);
+    background-size: auto auto;
+    background-clip: border-box;
+    background-size: 200% auto;
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    animation: textclip 6s linear infinite;
+    display: inline-block;
+    animation-direction: reverse;
+}
 
-
+@keyframes textclip {
+    to {
+        background-position: 200% center;
+    }
+}
